# ToxicBot

./: Cargo.toml  Music_taneay_bot  README.md  deploy.sh
.github/workflows/: rust.yml
insults_data/: README.md
insults_data/ces/: dataset1.txt
insults_data/eng/: dataset1.txt.base64
insults_data/rus/: dataset-pikabu.txt.base64  dataset1.txt  dataset2.txt
src/: cmd_bot.rs  constants.rs  main.rs  telegram_bot.rs  toxic_bot.rs
